[gd_scene load_steps=63 format=3 uid="uid://uopmy20bfd5u"]

[ext_resource type="Script" path="res://scripts/shop/layout_1_bridge_shop.gd" id="1_u4soe"]
[ext_resource type="PackedScene" uid="uid://wdl2k0o6ywsg" path="res://scenes/weapons/basic_bow/basic_bow.tscn" id="2_jm5b7"]
[ext_resource type="PackedScene" uid="uid://cgrrba5xjnrnt" path="res://scenes/layouts/shop/shop_item.tscn" id="2_w6jpp"]
[ext_resource type="PackedScene" uid="uid://bf082ldlxis2j" path="res://scenes/weapons/basic_knife/basic_knife.tscn" id="3_3n603"]
[ext_resource type="Texture2D" uid="uid://bj73ujpjgcl1f" path="res://sprites/omraader/omraade1/o1-1/o1-1_jord.png" id="3_47ykq"]
[ext_resource type="Texture2D" uid="uid://c4lbw0ps8gyvg" path="res://sprites/vaaben/ranged/bue/bue_idle.png" id="3_c6u3c"]
[ext_resource type="Texture2D" uid="uid://brmltw14xbo8k" path="res://sprites/omraader/omraade1/o1-1/o1-1_klippe.png" id="4_gy8jp"]
[ext_resource type="PackedScene" uid="uid://d0v146npydiyy" path="res://scenes/weapons/boomerang/boomerang_weapon.tscn" id="4_ocq2q"]
[ext_resource type="Texture2D" uid="uid://cq483p68yt4ko" path="res://sprites/vaaben/melee/kniv/kniv_idle.png" id="5_22u78"]
[ext_resource type="Texture2D" uid="uid://d2edlf0emj66y" path="res://sprites/omraader/omraade1/o1-1/o1-1_taage-1.png" id="5_idw70"]
[ext_resource type="Texture2D" uid="uid://c6oupynhymm3q" path="res://sprites/omraader/omraade1/o1-1/o1-1_taage-2.png" id="6_gxmq8"]
[ext_resource type="Texture2D" uid="uid://dm2aj2nj5j6ua" path="res://sprites/vaaben/ranged/boomerang/bommerang_idle_angreb-1.png" id="7_hrufs"]
[ext_resource type="Texture2D" uid="uid://dtwbw1u4eptvv" path="res://sprites/omraader/omraade1/bro/bro_op-ende.png" id="7_q0lb1"]
[ext_resource type="PackedScene" uid="uid://ca64n4anj8bud" path="res://scenes/weapons/water_staff/water_staff.tscn" id="8_rmi15"]
[ext_resource type="Texture2D" uid="uid://dycs6u1lit6rn" path="res://sprites/vaaben/ranged/vand_stav/vand-stav_idle.png" id="9_k04xp"]
[ext_resource type="PackedScene" uid="uid://dg6msycllecxg" path="res://scenes/weapons/giant_hammer/giant_hammer.tscn" id="10_ag2d0"]
[ext_resource type="Texture2D" uid="uid://j6xrn85xo2qb" path="res://sprites/vaaben/melee/hammer/hammer_idle.png" id="11_fygf1"]
[ext_resource type="PackedScene" uid="uid://ddfq48ogx6vhq" path="res://scenes/weapons/shield/shield.tscn" id="12_773oc"]
[ext_resource type="Texture2D" uid="uid://t70iiylxcj63" path="res://sprites/vaaben/melee/skjold/skjold_idle.png" id="13_kgiep"]
[ext_resource type="Script" path="res://scripts/shop/shop_item_resource.gd" id="15_6p3av"]
[ext_resource type="PackedScene" uid="uid://c8qnpo7dkw86m" path="res://scenes/weapons/ice_cannon/ice_cannon.tscn" id="16_axvr7"]
[ext_resource type="Texture2D" uid="uid://bim84cp6kchdj" path="res://sprites/vaaben/ranged/is_kannon/is-kannon_idle.png" id="17_m08wa"]
[ext_resource type="PackedScene" uid="uid://556qme2y04kq" path="res://scenes/weapons/fire_staff/fire_staff.tscn" id="18_batoi"]
[ext_resource type="Texture2D" uid="uid://bdg2ds0brm88q" path="res://sprites/vaaben/ranged/ild_stav/ild-stav_idle.png" id="19_dip50"]
[ext_resource type="Texture2D" uid="uid://mckmd17nrgpn" path="res://sprites/omraader/omraade1/bro/bro_ned-ende.png" id="19_puqjo"]
[ext_resource type="Texture2D" uid="uid://chxdt75id3h2c" path="res://sprites/omraader/omraade1/o1_kun-taage.png" id="20_8wijq"]
[ext_resource type="PackedScene" uid="uid://d33m2ojb6s3r5" path="res://scenes/weapons/le/le.tscn" id="20_b6mrn"]
[ext_resource type="Texture2D" uid="uid://eoaedts82ej4" path="res://sprites/vaaben/melee/le/le_idle.png" id="21_5mut4"]
[ext_resource type="PackedScene" uid="uid://oruuej8gtlva" path="res://scenes/weapons/rock_guitar/rockguitar.tscn" id="22_tsyaa"]
[ext_resource type="Texture2D" uid="uid://dkvlsoqapoya4" path="res://sprites/vaaben/ranged/rockguitar/rockguitar_idle.png" id="23_7f7yv"]
[ext_resource type="Script" path="res://scripts/shop/shop_keeper.gd" id="27_d84on"]
[ext_resource type="Texture2D" uid="uid://bd1iqh8co78v8" path="res://sprites/omraader/omraade1/bro/bro_op-ned.png" id="30_jnpp3"]
[ext_resource type="Texture2D" uid="uid://ca56rpvg2hvk6" path="res://sprites/andet/Shop/butik_iventory-tasker.png" id="31_3r0q6"]
[ext_resource type="Texture2D" uid="uid://b43o52kcvk2rk" path="res://sprites/andet/navigationsikoner/boss-navi.png" id="32_3m08x"]
[ext_resource type="Texture2D" uid="uid://xu38bphvoeo2" path="res://sprites/andet/Shop/shop-npc_idle-1.png" id="32_7yk6m"]
[ext_resource type="Texture2D" uid="uid://curass3tibjis" path="res://sprites/andet/Shop/shop-npc_idle-2.png" id="33_a4j1h"]
[ext_resource type="Texture2D" uid="uid://cxjp6pl4n6orq" path="res://sprites/andet/navigationsikoner/coin-navi.png" id="33_xipk3"]
[ext_resource type="Texture2D" uid="uid://vq78ba2sveco" path="res://sprites/andet/navigationsikoner/coin-navi_svaer.png" id="34_o85xa"]
[ext_resource type="Texture2D" uid="uid://noro7slaipjb" path="res://sprites/andet/Shop/shop-npc_talk-1.png" id="34_qwfyk"]
[ext_resource type="Texture2D" uid="uid://dv25fhpj0104q" path="res://sprites/andet/navigationsikoner/item-navi_svaer.png" id="35_4bp87"]
[ext_resource type="Texture2D" uid="uid://diu1lnq11s5q8" path="res://sprites/andet/Shop/shop-npc_talk-2.png" id="35_omxw5"]
[ext_resource type="Texture2D" uid="uid://cj1ysfgf83e6p" path="res://sprites/andet/Shop/shop-npc_talebobbel.png" id="36_1e12s"]
[ext_resource type="Texture2D" uid="uid://wbukrhpjx6my" path="res://sprites/andet/navigationsikoner/vaaben-navi_svaer.png" id="36_powfy"]
[ext_resource type="Texture2D" uid="uid://ca2aojprs6ax7" path="res://sprites/andet/navigationsikoner/item-navi.png" id="37_hgtup"]
[ext_resource type="Texture2D" uid="uid://d0euhootl101" path="res://sprites/andet/Shop/butik_ammo-bord.png" id="37_yp48g"]
[ext_resource type="Texture2D" uid="uid://c57xlu1ebu5e7" path="res://sprites/andet/navigationsikoner/shop-navi.png" id="38_irnyg"]
[ext_resource type="Texture2D" uid="uid://d35x3at6feurn" path="res://sprites/andet/Shop/butik_item-kurv.png" id="39_6gj8a"]
[ext_resource type="Texture2D" uid="uid://bcbpfwbsc0jsh" path="res://sprites/andet/navigationsikoner/vaaben-navi.png" id="39_rpl2l"]

[sub_resource type="Resource" id="Resource_shqo3"]
script = ExtResource("15_6p3av")
weapon_name = "Basic bow"
cost = 10
shop_texture = ExtResource("3_c6u3c")
scene = ExtResource("2_jm5b7")

[sub_resource type="Resource" id="Resource_5o5c1"]
script = ExtResource("15_6p3av")
weapon_name = "Basic knife"
cost = 10
shop_texture = ExtResource("5_22u78")
scene = ExtResource("3_3n603")

[sub_resource type="Resource" id="Resource_fd2le"]
script = ExtResource("15_6p3av")
weapon_name = "Water staff"
cost = 30
shop_texture = ExtResource("9_k04xp")
scene = ExtResource("8_rmi15")

[sub_resource type="Resource" id="Resource_ylcik"]
script = ExtResource("15_6p3av")
weapon_name = "Giant hammer"
cost = 35
shop_texture = ExtResource("11_fygf1")
scene = ExtResource("10_ag2d0")

[sub_resource type="Resource" id="Resource_ivt41"]
script = ExtResource("15_6p3av")
weapon_name = "Boomerang"
cost = 15
shop_texture = ExtResource("7_hrufs")
scene = ExtResource("4_ocq2q")

[sub_resource type="Resource" id="Resource_q78ws"]
script = ExtResource("15_6p3av")
weapon_name = "Shield"
cost = 5
shop_texture = ExtResource("13_kgiep")
scene = ExtResource("12_773oc")

[sub_resource type="Resource" id="Resource_d4pq8"]
script = ExtResource("15_6p3av")
weapon_name = "Ice cannon"
cost = 20
shop_texture = ExtResource("17_m08wa")
scene = ExtResource("16_axvr7")

[sub_resource type="Resource" id="Resource_83u4y"]
script = ExtResource("15_6p3av")
weapon_name = "Fire staff"
cost = 10
shop_texture = ExtResource("19_dip50")
scene = ExtResource("18_batoi")

[sub_resource type="Resource" id="Resource_wj5pe"]
script = ExtResource("15_6p3av")
weapon_name = "Scythe"
cost = 25
shop_texture = ExtResource("21_5mut4")
scene = ExtResource("20_b6mrn")

[sub_resource type="Resource" id="Resource_2j037"]
script = ExtResource("15_6p3av")
weapon_name = "Rock Guitar"
cost = 35
shop_texture = ExtResource("23_7f7yv")
scene = ExtResource("22_tsyaa")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_161u1"]
size = Vector2(120, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_filox"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_3m08x")
}],
"loop": true,
"name": &"Boss",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_xipk3")
}],
"loop": true,
"name": &"Coins",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_o85xa")
}],
"loop": true,
"name": &"Elite Coins",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_4bp87")
}],
"loop": true,
"name": &"Elite Item",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_powfy")
}],
"loop": true,
"name": &"Elite Vaaben",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_hgtup")
}],
"loop": true,
"name": &"Item",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_irnyg")
}],
"loop": true,
"name": &"Shop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_rpl2l")
}],
"loop": true,
"name": &"Vaaben",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rieem"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_7yk6m")
}, {
"duration": 1.0,
"texture": ExtResource("33_a4j1h")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_qwfyk")
}, {
"duration": 1.0,
"texture": ExtResource("35_omxw5")
}],
"loop": true,
"name": &"Talk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5s52p"]
size = Vector2(152, 148)

[node name="Layout1BridgeShop" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_u4soe")
shop_item_slot_scene = ExtResource("2_w6jpp")
shop_item_resource_array = Array[ExtResource("15_6p3av")]([SubResource("Resource_shqo3"), SubResource("Resource_5o5c1"), SubResource("Resource_fd2le"), SubResource("Resource_ylcik"), SubResource("Resource_ivt41"), SubResource("Resource_q78ws"), SubResource("Resource_d4pq8"), SubResource("Resource_83u4y"), SubResource("Resource_wj5pe"), SubResource("Resource_2j037")])

[node name="TaageBagrund" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -10261.0
offset_top = -5156.0
offset_right = 13577.0
offset_bottom = 6893.0
texture = ExtResource("20_8wijq")

[node name="Klippe" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 210.0
scale = Vector2(12, 12)
texture = ExtResource("4_gy8jp")

[node name="TaageSolidFarve" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 210.0
scale = Vector2(12, 12)
texture = ExtResource("6_gxmq8")

[node name="TaageGennemsigtig" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.516)
layout_mode = 0
offset_right = 200.0
offset_bottom = 210.0
scale = Vector2(12, 12)
texture = ExtResource("5_idw70")

[node name="Jord" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 210.0
scale = Vector2(12, 12)
texture = ExtResource("3_47ykq")

[node name="BroNed-ende" type="Sprite2D" parent="."]
position = Vector2(1104, 2268)
scale = Vector2(12, 12)
texture = ExtResource("19_puqjo")
centered = false

[node name="BroOp-ned" type="Sprite2D" parent="."]
position = Vector2(936, -1032)
scale = Vector2(12, 12)
texture = ExtResource("30_jnpp3")
centered = false

[node name="BroOp-ende" type="Sprite2D" parent="."]
position = Vector2(936, -456)
scale = Vector2(12, 12)
texture = ExtResource("7_q0lb1")
centered = false

[node name="Boundary1BridgeShop" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boundary1BridgeShop"]
position = Vector2(540, 2256)
build_mode = 1
polygon = PackedVector2Array(60, -48, 72, -156, 48, -228, 72, -300, 24, -372, 72, -456, 48, -564, 84, -636, 48, -696, 84, -792, 24, -948, 72, -1056, 36, -1128, 84, -1272, 12, -1392, 96, -1620, 48, -1716, 60, -1788, 36, -1884, 84, -1992, 72, -2064, 168, -2124, 252, -2088, 468, -2136, 612, -2076, 647.934, -2086.78, 648, -2688, 768, -2688, 767.868, -2102.22, 864, -2076, 960, -2112, 1092, -2064, 1212, -2112, 1320, -2052, 1380, -1944, 1332, -1812, 1368, -1680, 1308, -1536, 1368, -1476, 1344, -1380, 1356, -1272, 1344, -1116, 1332, -1032, 1344, -936, 1320, -888, 1380, -792, 1368, -708, 1308, -648, 1332, -564, 1308, -504, 1356, -372, 1368, -156, 1368, -60, 1308, 36, 1200, 60, 1092, -24, 972, 24, 864, 36, 816, 0, 672, 48, 528, -12, 384, 36, 252, -12, 132, 24)
disabled = true

[node name="TeleporterArea1" type="Area2D" parent="."]
position = Vector2(312, 0)

[node name="Teleporter1" type="CollisionShape2D" parent="TeleporterArea1"]
position = Vector2(936, -453)
shape = SubResource("RectangleShape2D_161u1")
disabled = true

[node name="ShopItemsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 1500)
layout_mode = 0
offset_left = 1344.0
offset_top = 492.0
offset_right = 1694.0
offset_bottom = 1992.0
theme_override_constants/separation = 20

[node name="Spawnpoint" type="Marker2D" parent="."]
position = Vector2(1416, 2232)

[node name="rewardLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1140.0
offset_top = 168.0
offset_right = 1378.0
offset_bottom = 313.0
theme_override_font_sizes/font_size = 100
text = "Filler"

[node name="rewardIcon" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(1245, 258)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_filox")
animation = &"Elite Vaaben"

[node name="InventoryButik" type="Node2D" parent="."]
position = Vector2(728, 1561)

[node name="limitPurchase" type="Button" parent="InventoryButik"]
unique_name_in_owner = true
offset_top = 125.0
offset_right = 295.0
offset_bottom = 171.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 22
text = "Filler"
metadata/_edit_use_anchors_ = true

[node name="Tasker" type="Sprite2D" parent="InventoryButik"]
position = Vector2(149, 73)
scale = Vector2(6, 6)
texture = ExtResource("31_3r0q6")

[node name="ShopKeeper" type="Node2D" parent="."]
position = Vector2(959, 1078.57)
script = ExtResource("27_d84on")

[node name="ShopKeeperSprite" type="AnimatedSprite2D" parent="ShopKeeper"]
position = Vector2(-23, -75)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_rieem")
animation = &"Idle"

[node name="StaticBody2D" type="StaticBody2D" parent="ShopKeeper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopKeeper/StaticBody2D"]
position = Vector2(-34, -43)
shape = SubResource("RectangleShape2D_5s52p")
disabled = true

[node name="ammoBord" type="Sprite2D" parent="ShopKeeper"]
position = Vector2(-178, 45.4301)
scale = Vector2(6, 6)
texture = ExtResource("37_yp48g")

[node name="RefillAmmo" type="Button" parent="ShopKeeper"]
offset_left = -282.0
offset_top = 148.43
offset_right = -44.0
offset_bottom = 187.43
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 22
text = "Refill Ammo: 10 Coins"

[node name="SpeechBubbleText" type="RichTextLabel" parent="ShopKeeper"]
z_index = 1
offset_left = -128.0
offset_top = -218.0
offset_right = 93.0
offset_bottom = -139.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
text = "Goddag, vil du have nogle skud! Du får et refill per våben!"

[node name="SpeechBubble" type="Sprite2D" parent="ShopKeeper"]
position = Vector2(-18, -77)
scale = Vector2(8, 8)
texture = ExtResource("36_1e12s")

[node name="ItemButik" type="Node2D" parent="."]
position = Vector2(54, -981)

[node name="ItemKurv" type="Sprite2D" parent="ItemButik"]
position = Vector2(859, 1593)
scale = Vector2(6, 6)
texture = ExtResource("39_6gj8a")

[node name="ItemPurchase" type="Button" parent="ItemButik"]
offset_left = 751.0
offset_top = 1662.0
offset_right = 976.0
offset_bottom = 1698.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Get Random Upgrade: 25 coins"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="InventoryButik/limitPurchase" to="." method="_on_limit_purchase_mouse_entered"]
[connection signal="mouse_exited" from="InventoryButik/limitPurchase" to="." method="_on_limit_purchase_mouse_exited"]
[connection signal="pressed" from="InventoryButik/limitPurchase" to="." method="_on_limit_purchase_pressed"]
[connection signal="mouse_entered" from="ShopKeeper/RefillAmmo" to="ShopKeeper" method="_on_refill_ammo_mouse_entered"]
[connection signal="mouse_exited" from="ShopKeeper/RefillAmmo" to="ShopKeeper" method="_on_refill_ammo_mouse_exited"]
[connection signal="pressed" from="ShopKeeper/RefillAmmo" to="ShopKeeper" method="_on_refill_ammo_pressed"]
[connection signal="mouse_entered" from="ItemButik/ItemPurchase" to="." method="_on_item_purchase_mouse_entered"]
[connection signal="mouse_exited" from="ItemButik/ItemPurchase" to="." method="_on_item_purchase_mouse_exited"]
[connection signal="pressed" from="ItemButik/ItemPurchase" to="." method="_on_item_purchase_pressed"]
